Add css and first content to htm

--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,45 @@
 <!Doctype HTML> <Html>
 <head>
 	<title>
-	Maths Blog
+	Blog
 	</title>
+	<link href="main.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
-	<h1>Maths Blog Home</h1>
+	<h1>Blog</h1>
+	<section>
+		<h2>Post two: my reading list</h2>
+		<ul>
+			<li>
+				<a href="http://www.amazon.co.uk/Code-Language-Computer-Hardware/dp/0735611319/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1456002520&amp;sr=1-1&amp;keywords=code">Code: The Hidden Language of Computer Hardware and Software</a> 
+				by Charles Petzold
+			</li>
+			<li>
+				<a href="http://www.amazon.co.uk/The-Code-Book-History-Code-breaking/dp/1857028899">The Code Book: The Secret History of Codes and Code-breaking</a> 
+				by Simon Singh
+			</li>
+			<li>
+				<a href="http://www.amazon.co.uk/Algorithm-Design-Manual-Steven-Skiena/dp/1848000693/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1456002653&amp;sr=1-1&amp;keywords=algorithm+design+manual">The Algorithm Design Manual</a> 
+				by Steven S Skiena
+			</li>
+			<li>
+				<a href="http://www.amazon.co.uk/Cracking-Coding-Interview-6th-Programming/dp/0984782850/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1456002758&amp;sr=1-1&amp;keywords=cracking+the+coding+interview">Cracking the Coding Interview, 6th Edition: 189 Programming Questions and Solutions</a> 
+				by Gayle Laakmann McDowell
+			</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Post one: a game</h2>
+		<p>
+
+		</p>
+	</section>
+	<section>
+		<h2>Post zero: initial post</h2>
+		<p>
+			This is my new blog on mathematical curios and economic articles of interest. It will also chart my journey towards becoming a proficient computer programmer. 
+		</p>
+	</section>
 </body>
 </html>
