--- a/index.htm
+++ b/index.htm
@@ -13,12 +13,15 @@
 <body>
     <h1>The DIY Masters</h1>
     <section>
-        <h2>Post four: Project Euler is great</h2>
+        <h2>Post five: Project Euler is great</h2>
         <p>
-            Project Euler is an excellent website for honing your problem solving skills. 
+            When I was reflecting on my learning so far, I realised that much of my progress had been achieved through the process of rote learning. Whilst, from a pedagogical perspective, this approach can have some merits, I found myself feeling that the best way forward from here would be to start setting myself challenges that were less procedural and would require reflection on how best to utilise my existing skillset to come up with an effective approach.
         </p>
         <p>
-            When I was reflecting on my learning process so far, I realised that much of my progress had been achieved through the process of rote learning. Whilst, from a pedagogical perspective, this approach can have some merits, I found myself feeling that the best way forward from here would be to start setting myself challenges that were less procedural and would require reflection by me on how best to utilise my existing skillset to come up with an effective approach.
+            <a href="https://projecteuler.net/">Project Euler</a> is an excellent resource for honing your computational and mathematical skills through problem solving. The Project Euler problems are great for this and have proved to be challenging and enjoyable in equal measure. I have been using Python for the majority of my solutions - it has been great to combine my love of solving mathematical problems with coding. I have learnt a lot more about python, utilising a wide variety of modules such as itertools and bitarray to help in specific circumstances.
+        </p>
+        <p>   
+            Whilst I am not quite at the point where I am able to solve the top difficulty puzzles just yet, I have solved 68 so far, which puts me in the top 3.4% of all problem solvers - aiming to get to become a one percenter soon!
         </p>
     </section>
         <section>
