initial welcome message added

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,15 @@
 <body>
     <h1>The DIY Masters</h1>
     <section>
+        <h2>Welcome</h2>
+        <p>
+            My name is Ben Ellison. This page is logging the progress that I have been making towards my goal of becoming a professional software developer. Hopefully it will be useful to others wishing to do the same.
+        </p>
+        <p>
+            Here is a link to <a href="https://github.com/ellisonben">my GitHub</a>.
+        </p>
+    </section>
+    <section>
         <h2>Post five: Project Euler is great</h2>
         <p>
             When I was reflecting on my learning so far, I realised that much of my progress had been achieved through the process of rote learning. Whilst, from a pedagogical perspective, this approach can have some merits, I found myself feeling that the best way forward from here would be to start setting myself challenges that were less procedural and would require reflection on how best to utilise my existing skillset to come up with an effective approach.
