--- a/ticTacToe.htm
+++ b/ticTacToe.htm
@@ -10,21 +10,21 @@
 <body>
     <div id="ticTacToe">
         <div class="row">
-            <div class="square" id="0,0">X</div>
-            <div class="square" id="1,0">O</div>
-            <div class="square" id="2,0"></div>
+            <div class="square" id="0,0"><div class="move">X</div></div>
+            <div class="square" id="1,0"><div class="move"></div></div>
+            <div class="square" id="2,0"><div class="move">O</div></div>
             <div class="clearfix"></div>
         </div>
         <div class="row">
-            <div class="square" id="0,1"></div>
-            <div class="square" id="1,1"></div>
-            <div class="square" id="2,1"></div>
+            <div class="square" id="0,1"><div class="move"></div></div>
+            <div class="square" id="1,1"><div class="move"></div></div>
+            <div class="square" id="2,1"><div class="move"></div></div>
             <div class="clearfix"></div>
         </div>
         <div class="row">
-            <div class="square" id="0,2"></div>
-            <div class="square" id="1,2"></div>
-            <div class="square" id="2,2"></div>
+            <div class="square" id="0,2"><div class="move"></div></div>
+            <div class="square" id="1,2"><div class="move"></div></div>
+            <div class="square" id="2,2"><div class="move"></div></div>
             <div class="clearfix"></div>
         </div>
         
