fixed cbug by changing size in canvas element as opposed to CSS

--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
         <p>
             Here is a bouncing ball that I have coded up to bounce around a canvas object at constant speed, bouncing off of the walls as it collides with them. I have implemented this using a Vector type to model the speed and position of a Ball object, updating the ball's position and redrawing each time the animation is repainted using requestAnimationFrame.
         </p>
-        <canvas id="bouncingBall"></canvas>
+        <canvas id="bouncingBall" width="700" height="300"></canvas>
         <p>
             Below are the constructors for the Vector type and the Ball type. The position, taken as a parameter when constructing new Balls, is a Vector.   
         </p>
