animation added to connect four

--- a/connectFour.htm
+++ b/connectFour.htm
@@ -17,8 +17,10 @@
         <canvas class="column-header" id="connect-four-5" width="100" height="100"></canvas>
         <canvas class="column-header" id="connect-four-6" width="100" height="100"></canvas>
         <div class="clearfix"></div>
-        
-        <canvas id ="connect-four-board" width="700" height="600"></canvas>
+        <div class="wrapper">
+            <canvas id ="connect-four-frame" width="700" height="600"></canvas>
+            <canvas id ="connect-four-moves" width="700" height="600"></canvas>
+        </div>
         <div class="clearfix"></div>
         
         <input type="button" value="New Game" id="connect-four-new-game">
